# openapi.yaml
@@ -2277,9 +2277,9 @@ components:
       additionalProperties:
         "$ref": "#/components/schemas/PluginCollectionData"
     PluginCollectionData:
-      "$ref": "#/components/schemas/Recordstringdef-alias-src_types.ts-14245-15421-src_types.ts-0-271491108268078"
+      "$ref": "#/components/schemas/Recordstringdef-alias-src_types.ts-14913-16089-src_types.ts-0-278171108268078"
       description: "A plugin's collections, keyed by the collection id its manifest declares."
-    Recordstringdef-alias-src_types.ts-14245-15421-src_types.ts-0-271491108268078:
+    Recordstringdef-alias-src_types.ts-14913-16089-src_types.ts-0-278171108268078:
       type: object
       additionalProperties:
         type: array
@@ -2354,6 +2354,8 @@ components:
             - half
             - full
         contextMenu:
+          type: boolean
+        derived:
           type: boolean
       required:
         - key
